JumpScript/tests/baselines/reference/exponentiationOperatorWithUndefinedValueAndInvalidOperands.errors.txt
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(9,12): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(9,25): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(10,12): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(10,25): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(11,12): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(11,25): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(13,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(13,17): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(14,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(14,17): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(15,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(15,17): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(17,12): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(17,25): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(18,12): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(18,25): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(19,12): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(19,25): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(21,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(21,20): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(22,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(22,18): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(23,12): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump(23,18): error TS2532: Object is possibly 'undefined'.


==== tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithUndefinedValueAndInvalidOperands.jump (24 errors) ====
    // If one operand is the undefined or undefined value, it is treated as having the type of the
    // other operand.
    
    var a: boolean;
    var b: string;
    var c: Object;
    
    // operator **
    var r1a1 = undefined ** a;
               ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                            ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var r1a2 = undefined ** b;
               ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                            ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var r1a3 = undefined ** c;
               ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                            ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var r1b1 = a ** undefined;
               ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                    ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r1b2 = b ** undefined;
               ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                    ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r1b3 = c ** undefined;
               ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                    ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    
    var r1c1 = undefined ** true;
               ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                            ~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var r1c2 = undefined ** '';
               ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                            ~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var r1c3 = undefined ** {};
               ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                            ~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var r1d1 = true ** undefined;
               ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r1d2 = '' ** undefined;
               ~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r1d3 = {} ** undefined;
               ~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.